crates/forge-tui/src/app/snapshots/forge_tui__app__replay__tests__render_grouped_five_reads_at_l1_titles.snap
---
source: crates/forge-tui/src/app/replay.rs
expression: snapshot
---
  ✓ ⬚ Read crates/forge-tui/src/0.rs
  ✓ ⬚ Read crates/forge-tui/src/1.rs
  ✓ ⬚ Read crates/forge-tui/src/2.rs
  ✓ ⬚ Read crates/forge-tui/src/3.rs
  ✓ ⬚ Read crates/forge-tui/src/4.rs
