crates/forge-tui/src/app/snapshots/forge_tui__app__replay__tests__render_grouped_five_reads_at_l2_summary.snap
---
source: crates/forge-tui/src/app/replay.rs
expression: snapshot
---
Forge
  ✓ = 5 reads   ctrl+x to expand
