crates/forge-tui/src/app/snapshots/forge_tui__app__replay__tests__render_grouped_reads_relativized_against_cwd.snap
---
source: crates/forge-tui/src/app/replay.rs
expression: snapshot
---
Forge
  ✓ 3 tool calls   ctrl+x to expand
  └─ ⬚ read
     ├─ crates/forge-tui/src/0.rs
     ├─ crates/forge-tui/src/1.rs
     └─ crates/forge-tui/src/2.rs
