crates/forge-tui/src/app/snapshots/forge_tui__app__replay__tests__render_in_flight_group_l2_shows_spinner_status_icon.snap
---
source: crates/forge-tui/src/app/replay.rs
expression: snap
---
Forge
⠋ ☰ 4 reads   ctrl+x to expand
