crates/forge-tui/src/app/snapshots/forge_tui__app__replay__tests__render_single_read_cycle_l0_bodies.snap
---
source: crates/forge-tui/src/app/replay.rs
expression: snap_l0
---
Forge
  ✓ ⬚ Read crates/forge-tui/src/0.rs
