crates/forge-tui/src/app/snapshots/forge_tui__app__replay__tests__render_single_read_renders_title_at_default_l2.snap
---
source: crates/forge-tui/src/app/replay.rs
expression: snapshot
---
Forge
  ✓ ⬚ Read crates/forge-tui/src/0.rs
