crates/forge-tui/src/app/snapshots/forge_tui__app__replay__tests__replay_monitor_persistent_stream_inspector_render.snap
---
source: crates/forge-tui/src/app/replay.rs
expression: snapshot
---
 INSPECTOR
 ──────────────────────────────────────
 GIT

 /test

 ──────────────────────────────────────

 SCHEDULES

 ⏰  Fallback in case monitor e… · in 59s
